package com.smarthire.domain.enums;

public enum UserRole {
    TENANT_ADMIN,
    ADMIN,
    HR,
    RECRUITER,
    CANDIDATE;
}
