package com.smarthire.domain.enums;

public enum UserStatus {
    ACTIVE,
    LOCKED,
    DISABLED;
}
